--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 # 基本ライブラリ
 requests>=2.31.0
 beautifulsoup4>=4.12.0
+lxml>=4.9.0
 feedparser>=6.0.0
 pydantic>=2.0.0
+
+# LLMクライアント
+openai>=1.30.0
 
 # スケジューリング
 APScheduler>=3.10.0
